name:                hpffp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/chengzh2008/hpffp#readme
license:             BSD3
license-file:        LICENSE
author:              Zhihong Cheng
maintainer:          example@example.com
copyright:           2017@Zhihong Cheng 
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hpffp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
